--- a/webapp/pages/login.html
+++ b/webapp/pages/login.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -10,8 +11,10 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <meta name="Keywords" content="" />
-  <meta name="Description" content="" />
+  <meta name="Keywords" content="比特信任系统、BIUT、BIU，加密货币、信任共识、ICO、信任算法、区块链3.0、PC-miner、Permissionless trust" />
+  <meta name="Description"
+    content="比特信任系统是一种新的分布式信任系统，是第一个建立账户间基于系统信任的区块链网络，专注于互联网用户安全的进行去中心化交易和协作，为开发者、商家和互联网用户打开数字经济大门的钥匙" />
+
 
   <link rel="shortcut icon" href="../static/favicon.ico">
   <!--[if lt IE 9]>
@@ -26,10 +29,9 @@
 	        document.execCommand("Stop");
 	    </script>
   <![endif]-->
-  <title>BIUT-社交电子商务链</title>
+  <title data-locale="currentTitle">Bit Trust System</title>
   <link href="../dist/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="../css/reset.css" rel="stylesheet">
-  <link href="../css/swiper.min.css" rel="stylesheet">
   <link href="../css/public.css" rel="stylesheet">
   <link href="../css/login.css" rel="stylesheet">
 
@@ -42,51 +44,104 @@
     </span>
   </section>
 
-  <!-- 网页前部分内容 -->
-  <main class="login-container">
-    <!-- 头部导航 -->
-    <header class="public-head">
-      <!-- logo -->
-      <figure>
-        <img src="../images/nav-logo.png" alt="BIUT" title="BIUT">
-      </figure>
+  <!-- 头部导航 -->
+  <header class="public-head" id="header-nav">
+    <!-- logo -->
+    <figure id="toggle-head">
+      <img src="../images/nav-logo.png" alt="BIUT" title="BIUT">
+      <figcaption id="navbar-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </figcaption>
+    </figure>
 
-      <!-- nav导航条 -->
-      <nav>
-        <ul>
-          <li>
-            <a href="../index.html" data-locale="nav-home">Home</a>
-          </li>
-          <li>
-            <a href="about.html" data-locale="nav-about">About</a>
-          </li>
-          <li class="check-color check-img">
-            <img src="../images/index/nav-check.png" alt="">
-            <span data-locale="nav-dynamic">Dynamic</span>
-          </li>
-          <li>
-            <a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="nav-gitter">Gitter</a>
-          </li>
-          <li class="login">
-            <a href="#" data-locale="nav-login">登陆</a>
-          </li>
-          <li>
-            <span id="i18nZh"> 中文 </span>
-            <span class="head-line"> / </span>
-            <span id="i18nEn" class="check-color"> EN </span>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    
-    <footer>
-      <span>COPYRIGHT  © 2017 SEC TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</span>
-    </footer>
+    <!-- nav导航条 -->
+    <nav id="tabNav">
+      <ul>
+        <li>
+          <a href="../index.html" data-locale="nav-home">Home</a>
+        </li>
+        <li>
+          <a href="https://www.secblock.io/themes/dorawhite/doc/biut-whitepaper-v3.72-english.pdf" class="whitepaper"
+            target="_blank" data-locale="h-banner-list-txt2">WhitePaper</a>
+        </li>
+        <li>
+          <a href="http://scan.biut.io/" target="_blank" data-locale="nav-explorer">Explorer</a>
+        </li>
+        <li>
+          <a href="about.html" data-locale="nav-about">About</a>
+        </li>
+        <li>
+          <a href="dynamic.html" data-locale="nav-dynamic">Dynamic</a>
+        </li>
+        <li>
+          <a href="dapp.html" data-locale="nav-dapp">DApp</a>
+        </li>
+        <li class="login">
+          <a href="login.html" data-locale="nav-login">登陆</a>
+        </li>
+        <li>
+          <span id="i18nZh"> 中文 </span>
+          <span class="head-line"> / </span>
+          <span id="i18nEn"> EN </span>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- 网页前部分内容 -->
+  <main class="public-container">
+    <!-- 重置用户名 -->
+    <section class="login-content public-cnt">
+      <h2>登录</h2>
+      <section class="public-flex-list">
+        <input type="text" placeholder="请输入用户名或电话号码" />
+        <img src="" alt="">
+      </section>
+      <button type="button" class="public-btn login-btn">确认登陆</button>
+      <section class="create-list">
+        <a href="" class="public-btn">没有账户？创建一个！</a>
+        <a href="" class="public-btn">忘记用户名</a>
+      </section>
+    </section>
+
+    <!-- 确认电话号码 -->
+    <section class="phone-content public-cnt">
+      <h2>确认电话号码</h2>
+      <p>请验证国家/地区代码</p>
+      <section class="public-flex-list phone-list">
+        <figure>
+          <img src="../images/login/china.png" alt="">
+          <img src="../images/login/checkDown.png" alt="">
+        </figure>
+        <input type="text" placeholder="请输入电话号码" />
+        <img src="../images/login/tipsImg.png" alt="" class="error-img">
+        <section style="display: none">
+          <ul>
+            <li>1</li>
+          </ul>
+        </section>
+      </section>
+      <section class="error-txt">
+        <span>此电话号码看起来不正确，请检查国家/地区代码和电话号码</span>
+        <span>该账户不存在，请输入其它账户或 <a href="" class="public-blur">获取新账户</a></span>
+      </section>
+      <section class="public-btn-list">
+        <button type="button" class="public-btn">上一步</button>
+        <button type="button" class="public-btn">下一步</button>
+      </section>
+    </section>
   </main>
 
 
 </body>
 <script src="../dist/jq/jquery-3.4.1.min.js"></script>
+<script src="../dist/wow/wow.js"></script>
+<script src="../dist/jq/jquery.lazyload.min.js"></script>
 <script src="../dist/jq/jquery.i18n.properties-min-1.0.9.js"></script>
 <script src="../dist/bootstrap/js/bootstrap.min.js"></script>
+<script src="../js/public.js"></script>
+<script src="../js/login.js"></script>
+
 </html>
